Version 0.3-2
=============
- Renaming of parameter in simConfint: "confintF" is now "confint"
- Updated confidence interval dialog (but still in development).
- Confidence intervals for t- and normal distribution can be calculated based on the p-values and point estimates in most cases.
- Reduced the package size.
- Further improved capabilities for bug reporting.
- We need rJava (≥ 0.8-3).
- Vignette can be shown from inside the GUI.

Version 0.3-1
=============
- The GUI has a menu bar.
- Improved capabilities for bug reporting. All information that is sent is also shown.
- Workaround for a problem with the graph package when a node has no out-going edges.
- Numbers are now accepted with "." and "," as decimal points
- A newly created edge is now by default an epsilon edge.
- Edges from one node to itself (loops) are not allowed any more.
- Start button is only enabled, if the graph has any nodes.
- Bug-fix regarding epsilon edges.

Version 0.3-0
=============
- Major API changes (mostly gsrmtp replaced by gMCP - but now the API should stay relatively stable).  
- GraphGUI can now also be called directly on objects of class graphMCP, like graphGUI(rejectNode(graph, "H1")).
- Small GUI bug-fix for placing edge labels while in any other zoom level than 100%.
- Completely separated nodes (which only occur in sub-optimal testing procedures) are now handled correctly.
- If the graph has no nodeRenderInfo available when the GUI is called, the edges are placed in a circle.
- Deducer support if installed and loaded.

Version 0.2-4
=============
- After some alpha and beta releases on r-forge this is the first version on CRAN.
- We support: Graphs with epsilon edges, confidence intervals, adjusted p-values.