@@ -2,7 +2,7 @@ import(graph)
 import(rJava)
 importFrom(graphics, plot)
 exportClasses(graphMCP, gMCPResult)
-exportMethods(plot, print, getAlpha, getRejected, getX, getY, simConfint, addEdge)
+exportMethods(plot, print, getAlpha, setAlpha, getRejected, getX, getY, simConfint, addEdge)
 export(gMCP)
 export(createBonferroniHolmGraph)
 export(createGraphFromBretzEtAl)
